# ShipKit

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/scripts/: clean-full.sh  clean-heavy.sh  lean-dev.sh
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  state.rs
apps/desktop/src-tauri/src/commands/: database.rs  logger.rs  mod.rs  settings.rs  theme.rs
apps/desktop/src/components/: DatabasePanel.tsx  LogPanel.tsx  SettingsPanel.tsx  ThemePanel.tsx
apps/desktop/src/lib/: bindings.ts  invoke.ts
