[package]
name = "shipkit-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
shipkit-core = { path = "../../../packages/core" }
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
